# Reversi

./: .project  AI.cpp  AI.h  Board.cpp  Board.h  CMakeLists.txt  Cell.cpp  Cell.h  Game.cpp  Game.h  HumanPlayer.cpp  HumanPlayer.h  HumenPlayer.cpp  HumenPlayer.h  Main.cpp  Player.h  makefile
Exe/: serverConfiguration
ReversiGame/: .cproject  CMakeLists.txt  a.out  makefile  sources.txt
ReversiGame/Debug/: .gitignore  ReversiGame  makefile  sources.mk  subdir.mk
ReversiGame/Debug/googletest-release-1.8.0/googlemock/src/: subdir.mk
ReversiGame/Debug/googletest-release-1.8.0/googlemock/test/: subdir.mk
ReversiGame/Debug/googletest-release-1.8.0/googletest/codegear/: subdir.mk
ReversiGame/Debug/googletest-release-1.8.0/googletest/samples/: subdir.mk
ReversiGame/Debug/googletest-release-1.8.0/googletest/src/: subdir.mk
ReversiGame/Debug/googletest-release-1.8.0/googletest/test/: subdir.mk
ReversiGame/Debug/googletest-release-1.8.0/googletest/xcode/Samples/FrameworkSample/: subdir.mk
ReversiGame/Debug/gtest_src/: subdir.mk
ReversiGame/Debug/gtest_src/gtest/: gtest-all.d  subdir.mk
ReversiGame/Debug/src/: AI.d  AiGame.d  Cell.d  Client.d  ClientPlayer.d  ConsoleDisplay.d  Game.d  GameFlow.d  HumanPlayer.d  Main.d  OpponentClientPlayer.d  RemoteGame.d  TwoClientsGame.d  TwoHumansGame.d  subdir.mk
ReversiGame/Debug/test/: BoardTest.d  CellTest.d  PlayerTest.d  subdir.mk
ReversiGame/Tests/: BoardTest.cpp  CellTest.cpp  PlayerTest.cpp  gtest_main.cpp
ReversiGame/include/: AI.h  AiGame.h  Board.h  Cell.h  Client.h  ClientPlayer.h  ConsoleDisplay.h  Display.h  Game.h  GameFlow.h  GameLogic.h  HumanPlayer.h  OpponentClientPlayer.h  Player.h  RemoteGame.h  TwoClientsGame.h  TwoHumansGame.h  componentClientPlayer.h
ReversiGame/src/: AI.cpp  AI.h  AiGame.cpp  Board.cpp  Board.h  Cell.cpp  Cell.h  Client.cpp  ClientPlayer.cpp  ConsoleDisplay.cpp  Game.cpp  Game.h  GameFlow.cpp  HumanPlayer.cpp  HumanPlayer.h  Main.cpp  OpponentClientPlayer.cpp  Player.h  README.md  RemoteGame.cpp  TwoClientsGame.cpp  TwoHumansGame.cpp  a.out  componentClientPlayer.cpp  info.txt  log.txt  makefile
ReversiGame/test/: BoardTest.cpp  CellTest.cpp  PlayerTest.cpp
Server/: .cproject  CMakeLists.txt  ClientHandler.cpp  ClientHandler.h  Command.h  CommandManager.cpp  CommandManager.h  GameManager.cpp  GameManager.h  JoinCommand.cpp  JoinCommand.h  ListFileManager.cpp  ListFileManager.h  ListGamesCommand.cpp  ListGamesCommand.h  Main.cpp  Server.cpp  Server.h  StartCommand.cpp  StartCommand.h  Task.h  ThreadPool.cpp  ThreadPool.h  a.out  makefile  serverConfiguration.txt
Server/Debug/: ClientHandler.d  CommandManager.d  GameManager.d  JoinCommand.d  ListGamesCommand.d  Main.d  Server  Server.d  StartCommand.d  makefile  sources.mk  subdir.mk
Server/Debug/src/: subdir.mk
Server/Debug/test/: subdir.mk
Tests/: CellTest.cpp  PlayerTest.cpp
adi/server/include/: Server.h
adi/server/test/: gtest_main.cpp
adi/src/: Main.cpp  Server.cpp
etc/: info.txt  log.txt  protocol
exe/: .project  client.out  clientConfiguration  server.out  serverConfiguration.txt
